# chbk

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  bench_bw_local_minio.sh  chbk.example.env  disk.xml  docker-compose.yml
docs/: clickhouse-backup-format.md  local-minio.md  systemd.md
src/: blob_hash.rs  clickhouse.rs  gc.rs  main.rs  manifest.rs  part_zip.rs  parts.rs  retry.rs  snapshots.rs  storage.rs  tui.rs  upload.rs  util.rs
src/gc/: lock.rs
tests/: ch_local_harness.rs  integration.rs  live_snapshot_e2e.rs
