[package]
name = "chbk"
version = "0.1.0"
edition = "2024"
description = "S3-native ClickHouse MergeTree part backup tool"
license = "MIT"
readme = "README.md"
authors = ["Max Spransy"]
repository = "https://github.com/maxjustus/chbk"
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/Makefile",
    "/README.md",
    "/bench_bw_local_minio.sh",
    "/docker-compose.yml",
    "/chbk.example.env",
    "/docs/**",
    "/src/**",
    "/tests/**",
]

[dependencies]
bytes = "1"
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", default-features = false, features = ["gzip", "rustls-tls"] }
tokio = { version = "1.0", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io-util"] }
walkdir = "2.5"
zstd = "0.13"
futures = "0.3"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
crc32fast = "1"
anyhow = "1.0"
dotenvy = "0.15"
rayon = "1.10"
snmalloc-rs = { version = "0.3", features = ["build_cc"] }
ratatui = "0.29"
crossterm = "0.28"
gethostname = "0.5"
rand = "0.8"
console-subscriber = { version = "0.5", optional = true }

[features]
default = []
tokio-console = ["console-subscriber"]

[dev-dependencies]
tempfile = "3.8"
testcontainers = { version = "0.23", features = ["blocking"] }
testcontainers-modules = { version = "0.11", features = ["minio", "blocking"] }

[lints.rust]
unsafe_code                   = "deny"
missing_debug_implementations = "warn"
# missing_docs omitted — binary crate, docs are a separate effort
trivial_casts                 = "warn"
trivial_numeric_casts         = "warn"
unused_extern_crates          = "warn"
unused_import_braces          = "warn"
unused_qualifications         = "warn"
unused_results                = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
# restriction cherry-picks
unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
indexing_slicing            = "deny"
undocumented_unsafe_blocks = "warn"
dbg_macro                  = "warn"
# print_stdout/print_stderr omitted — this is a CLI tool, printing is its interface
# tune down high false-positive pedantic/nursery lints
module_name_repetitions    = "allow"
must_use_candidate         = "allow"
missing_errors_doc         = "allow"
missing_docs_in_private_items = "allow"
doc_markdown               = "allow"
similar_names              = "allow"
option_if_let_else         = "allow"
cast_precision_loss        = "allow"
cast_possible_wrap         = "allow"
cast_sign_loss             = "allow"
cast_possible_truncation   = "allow"
cast_lossless              = "allow"
missing_panics_doc         = "allow"
too_many_lines             = "allow"
items_after_statements     = "allow"
future_not_send            = "allow"
struct_field_names         = "allow"
large_futures              = "allow"

[profile.release]
debug = 1          # keep line/function symbols
lto = "thin"
